feat (main): add style
an example of .css optimisation, print.css will never been loaded unless the user ask to prind the page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title></title>
+    
+    <link href="style.css" rel="stylesheet" />
+    <link href="print.css" rel="stylesheet" media="print"/>
   </head>
   <body>
 
