feat (main): add script
notice the async tag, like that the script will not block DOM construction

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <link href="style.css" rel="stylesheet" />
     <link href="print.css" rel="stylesheet" media="print"/>
+    <script src="script.js" async></script>
   </head>
   <body>
 
